# rxx

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
src/: rxx.hpp
src/intrin/: unreachable.h
src/mem/: manually_destroy.h  maybe_uninit.hpp  mem.hpp  transmute.h  union.h
src/ptr/: not_null.h  pointee.h  ptr.hpp
